# fftx

./: CMakeLists.txt  Copyright.txt  License.txt  README.md
config/: config.md  fftx_build_info.h.in
config/CMakeIncludes/: locate_fftw3.cmake
examples/: CMakeLists.txt  exmples.md
examples/hello/: CMakeLists.txt  hello.c
examples/hello3d/: CMakeLists.txt  hello3d.c
examples/hockney/: CMakeLists.txt  hockney.c
examples/planewave/: CMakeLists.txt  planewave.c
examples/poisson/: CMakeLists.txt  poisson.c
examples/psatd/: CMakeLists.txt  psatd.c
include/fftx/: fftx.h  fftx_helper.h
src/: fftx.c  fftx.cu  src.md
test/: CMakeLists.txt  test.md
test/SingleFFT/: CMakeLists.txt
test/SingleFFT/dft_c2r_1d/: CMakeLists.txt  dft_c2r_1d.c
test/SingleFFT/dft_r2c_1d/: CMakeLists.txt  dft_r2c_1d.c
test/common/: FTCompare.c  FTCompare.h  FTCreateData.c  FTCreateData.h
